# spike

./: CMakeLists.txt  peripherals.overlay  pins.overlay  prj.conf
src/: main.cpp  settings.h
